-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 Beta3
-
None
-
-
35041077d (dev), e2f7b695c (6.5)
See the attached compilation errors that occur when trying to compile the example.
- resulted from
-
QTBUG-107849 Qt 6.4.0 Purchasing Hangman example does not start
-
- Closed
-
For Gerrit Dashboard: QTBUG-111477 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
462605,4 | QtQml: Make QQmlTypeNotAvailable public | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
463278,2 | QtQml: Make QQmlTypeNotAvailable public | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |