QtQml: Make QQmlTypeNotAvailable public

Since we are exposing it in the type registration macros, we need to
make it visible to the compiler.

Fixes: QTBUG-111477
Change-Id: I3dbefd617f00de6e97585d105c612bbc33d0224d
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 35041077dfcc8afd69b7404d7dae27f3e3745d4a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>